package main

import (
	"context"
	"database/sql"
	"fmt"
	"log"

	accountv1 "github.com/plaenen/eventstore/examples/pb/account/v1"
	"github.com/plaenen/eventstore/pkg/domain"
	"github.com/plaenen/eventstore/pkg/store/sqlite"
	"google.golang.org/protobuf/proto"
	_ "modernc.org/sqlite"
)

// This demo showcases the HIGH-LEVEL SQLite projection builder that provides:
//
// - Automatic transaction management (begin/commit/rollback)
// - Automatic checkpoint updates (atomic with projection updates)
// - Built-in rebuild functionality
// - Schema initialization support
// - Clean, simple handler code
//
// Compare this to the generic builder where you manually manage transactions!

func main() {
	fmt.Println("=== SQLite Projection Builder Demo ===")
	fmt.Println()
	fmt.Println("This demo shows the high-level SQLite projection builder")
	fmt.Println("that handles all the database boilerplate automatically.")
	fmt.Println()

	ctx := context.Background()

	// 1. Setup infrastructure
	fmt.Println("1Ô∏è‚É£  Setting up infrastructure...")
	eventStore, err := sqlite.NewEventStore(
		sqlite.WithDSN("file:sqlite_projection_demo.db?mode=memory&cache=shared"),
	)
	if err != nil {
		log.Fatal(err)
	}
	defer eventStore.Close()

	db := eventStore.DB()

	checkpointStore, err := sqlite.NewCheckpointStore(db)
	if err != nil {
		log.Fatal(err)
	}

	fmt.Println("   ‚úÖ Infrastructure ready")
	fmt.Println()

	// 2. Build projection with SQLite-specific builder
	fmt.Println("2Ô∏è‚É£  Building SQLite projection...")
	fmt.Println("   üìù Notice: Automatic transaction management!")
	fmt.Println("   üìù Notice: Automatic checkpoint updates!")
	fmt.Println("   üìù Notice: Built-in rebuild support!")
	fmt.Println()

	projection, err := sqlite.NewSQLiteProjectionBuilder(
		"account-summary",
		db,
		checkpointStore,
		eventStore,
	).
		// Define schema - runs automatically during Build()
		WithSchema(func(ctx context.Context, db *sql.DB) error {
			fmt.Println("   üèóÔ∏è  Initializing schema...")
			_, err := db.Exec(`
				CREATE TABLE IF NOT EXISTS account_summary (
					account_id TEXT PRIMARY KEY,
					owner_name TEXT NOT NULL,
					balance TEXT NOT NULL,
					status TEXT NOT NULL,
					transaction_count INTEGER DEFAULT 0,
					created_at INTEGER NOT NULL,
					updated_at INTEGER NOT NULL
				)
			`)
			return err
		}).
		// Register event handlers - transactions handled automatically!
		On(accountv1.OnAccountOpened(func(ctx context.Context, event *accountv1.AccountOpenedEvent, envelope *domain.EventEnvelope) error {
			fmt.Printf("   ‚ú® AccountOpened: %s (Owner: %s)\n", event.AccountId, event.OwnerName)

			// Get transaction from context - automatically provided!
			tx, _ := sqlite.TxFromContext(ctx)

			// Just do your database work - no transaction management needed!
			_, err := tx.Exec(`
				INSERT INTO account_summary (
					account_id, owner_name, balance, status,
					transaction_count, created_at, updated_at
				) VALUES (?, ?, ?, 'OPEN', 0, ?, ?)
			`, event.AccountId, event.OwnerName, event.InitialBalance, event.Timestamp, event.Timestamp)

			return err
			// Transaction commit and checkpoint update happen automatically!
		})).
		On(accountv1.OnMoneyDeposited(func(ctx context.Context, event *accountv1.MoneyDepositedEvent, envelope *domain.EventEnvelope) error {
			fmt.Printf("   üíµ MoneyDeposited: Amount %s\n", event.Amount)

			tx, _ := sqlite.TxFromContext(ctx)

			// Simple database update - no boilerplate!
			_, err := tx.Exec(`
				UPDATE account_summary
				SET balance = ?,
				    transaction_count = transaction_count + 1,
				    updated_at = ?
				WHERE account_id = ?
			`, event.NewBalance, event.Timestamp, event.AccountId)

			return err
		})).
		On(accountv1.OnMoneyWithdrawn(func(ctx context.Context, event *accountv1.MoneyWithdrawnEvent, envelope *domain.EventEnvelope) error {
			fmt.Printf("   üí∏ MoneyWithdrawn: Amount %s\n", event.Amount)

			tx, _ := sqlite.TxFromContext(ctx)

			_, err := tx.Exec(`
				UPDATE account_summary
				SET balance = ?,
				    transaction_count = transaction_count + 1,
				    updated_at = ?
				WHERE account_id = ?
			`, event.NewBalance, event.Timestamp, event.AccountId)

			return err
		})).
		On(accountv1.OnAccountClosed(func(ctx context.Context, event *accountv1.AccountClosedEvent, envelope *domain.EventEnvelope) error {
			fmt.Printf("   üîí AccountClosed\n")

			tx, _ := sqlite.TxFromContext(ctx)

			_, err := tx.Exec(`
				UPDATE account_summary
				SET status = 'CLOSED',
				    updated_at = ?
				WHERE account_id = ?
			`, event.Timestamp, event.AccountId)

			return err
		})).
		// Reset handler for rebuilds
		OnReset(func(ctx context.Context, tx *sql.Tx) error {
			fmt.Println("   üîÑ Resetting projection...")
			_, err := tx.Exec("DELETE FROM account_summary")
			return err
		}).
		Build()

	if err != nil {
		log.Fatalf("Failed to build projection: %v", err)
	}

	fmt.Println("   ‚úÖ SQLite projection built!")
	fmt.Println()

	// 3. Simulate events
	fmt.Println("3Ô∏è‚É£  Processing events...")

	testEvents := []*domain.EventEnvelope{
		{
			Event: domain.Event{
				ID:          "evt-1",
				AggregateID: "acc-bob-001",
				EventType:   accountv1.AccountOpenedEventType,
				Version:     1,
				Data:        mustMarshal(&accountv1.AccountOpenedEvent{
					AccountId:      "acc-bob-001",
					OwnerName:      "Bob",
					InitialBalance: "5000.00",
					Timestamp:      1234567890,
				}),
			},
		},
		{
			Event: domain.Event{
				ID:          "evt-2",
				AggregateID: "acc-bob-001",
				EventType:   accountv1.MoneyDepositedEventType,
				Version:     2,
				Data:        mustMarshal(&accountv1.MoneyDepositedEvent{
					AccountId:  "acc-bob-001",
					Amount:     "1000.00",
					NewBalance: "6000.00",
					Timestamp:  1234567900,
				}),
			},
		},
		{
			Event: domain.Event{
				ID:          "evt-3",
				AggregateID: "acc-bob-001",
				EventType:   accountv1.MoneyWithdrawnEventType,
				Version:     3,
				Data:        mustMarshal(&accountv1.MoneyWithdrawnEvent{
					AccountId:  "acc-bob-001",
					Amount:     "500.00",
					NewBalance: "5500.00",
					Timestamp:  1234567910,
				}),
			},
		},
		{
			Event: domain.Event{
				ID:          "evt-4",
				AggregateID: "acc-bob-001",
				EventType:   accountv1.MoneyDepositedEventType,
				Version:     4,
				Data:        mustMarshal(&accountv1.MoneyDepositedEvent{
					AccountId:  "acc-bob-001",
					Amount:     "2000.00",
					NewBalance: "7500.00",
					Timestamp:  1234567920,
				}),
			},
		},
		{
			Event: domain.Event{
				ID:          "evt-5",
				AggregateID: "acc-bob-001",
				EventType:   accountv1.AccountClosedEventType,
				Version:     5,
				Data:        mustMarshal(&accountv1.AccountClosedEvent{
					AccountId:    "acc-bob-001",
					FinalBalance: "7500.00",
					Timestamp:    1234567930,
				}),
			},
		},
	}

	// Process events through projection
	for _, envelope := range testEvents {
		if err := projection.Handle(ctx, envelope); err != nil {
			log.Fatalf("Failed to handle event: %v", err)
		}
	}

	fmt.Println()
	fmt.Println("4Ô∏è‚É£  Querying projection...")

	// Query the projection
	var accountID, ownerName, balance, status string
	var transactionCount int
	err = db.QueryRow(`
		SELECT account_id, owner_name, balance, status, transaction_count
		FROM account_summary
		WHERE account_id = ?
	`, "acc-bob-001").Scan(&accountID, &ownerName, &balance, &status, &transactionCount)
	if err != nil {
		log.Fatal(err)
	}

	fmt.Printf("   Account: %s\n", accountID)
	fmt.Printf("   Owner: %s\n", ownerName)
	fmt.Printf("   Balance: %s\n", balance)
	fmt.Printf("   Status: %s\n", status)
	fmt.Printf("   Transactions: %d\n", transactionCount)
	fmt.Println()

	// 5. Demonstrate rebuild functionality
	fmt.Println("5Ô∏è‚É£  Testing rebuild functionality...")
	fmt.Println("   üìù Rebuild replays all events from event store")
	fmt.Println()

	// First, save events to event store so we have something to rebuild from
	fmt.Println("   üíæ Saving events to event store...")
	// In real app, events are already in the event store
	// This is just for demo purposes
	_ = testEvents

	// Cast to SQLiteProjection to access Rebuild method
	sqliteProj := projection.(*sqlite.SQLiteProjection)

	// Demonstrate rebuild
	fmt.Println("   üîÑ Rebuilding projection from event store...")
	if err := sqliteProj.Rebuild(ctx); err != nil {
		log.Fatalf("Failed to rebuild: %v", err)
	}

	fmt.Println("   ‚úÖ Rebuild complete!")
	fmt.Println()

	fmt.Println("‚úÖ Demo complete!")
	fmt.Println()
	fmt.Println("Key benefits of SQLite projection builder:")
	fmt.Println("  üöÄ Zero boilerplate - just write your SQL")
	fmt.Println("  üîí Automatic transaction management")
	fmt.Println("  ‚úÖ Atomic checkpoint updates")
	fmt.Println("  üèóÔ∏è  Schema initialization support")
	fmt.Println("  üîÑ Built-in rebuild functionality")
	fmt.Println("  üéØ Type-safe event handlers")
	fmt.Println()
	fmt.Println("Usage pattern:")
	fmt.Println("  sqlite.NewSQLiteProjectionBuilder(name, db, checkpointStore, eventStore).")
	fmt.Println("    WithSchema(func(ctx, db) error { ... }).")
	fmt.Println("    On(accountv1.OnAccountOpened(func(ctx, event, envelope) error {")
	fmt.Println("      tx, _ := sqlite.TxFromContext(ctx)")
	fmt.Println("      _, err := tx.Exec(\"INSERT ...\")")
	fmt.Println("      return err")
	fmt.Println("    })).")
	fmt.Println("    Build()")
}

func mustMarshal(msg proto.Message) []byte {
	data, err := proto.Marshal(msg)
	if err != nil {
		panic(err)
	}
	return data
}
